# wasm-stemmers

./: Cargo.toml  README.md
src/: lib.rs
www/: index.js  package.json  pnpm-lock.yaml  webpack.config.js
