[package]
name = "wasm-stemmers"
version = "0.1.0"
authors = ["Erik Vullings <erik.vullings@tno.nl>"]
edition = "2018"
description = "A WASM implementation of the Porter stemmers, based on the [rust_stemmers](https://crates.io/crates/rust-stemmers) crate."
repository = "https://github.com/erikvullings/wasm-stemmers"
license = "Apache v2"
keywords = [
  "porter",
  "stemmer",
  "nlp",
  "typescript",
  "wasm",
  "webassembly",
  "rust",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
rust-stemmers = "1.2.0"
regex = "1.11.1"
lazy_static = "1.5.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Optimize for speed by inlining and pruning functions.
lto = true
# Tell `rustc` to optimize for small code size.
opt-level = "s"
